correct line height/wrapping

--- a/src/app/home/our-levels/our-levels.component.css
+++ b/src/app/home/our-levels/our-levels.component.css
@@ -29,6 +29,5 @@
     font-family: 'Open Sans', sans-serif;
     font-weight: normal;
     font-size: 15px;
-    width: 420px;
-    line-height: 25px;
+    line-height: 16px;
 }
